# editor-x

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
src/: main.rs  praser.rs
src/components/: debug.rs  editor.rs  editor_new.rs  event.rs  mod.rs  mouse_event.rs  toolbar.rs
