[package]
name = "editor-x"
version = "0.1.0"
authors = ["RaphaelNY <1278173058@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop", "web"] }
dioxus-web = "0.6.3"
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
tokio = { version = "1.0.1", features = ["full"] }
zino = {version = "0.32.2", features = ["dioxus"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
