[package]
name = "editor-x"
version = "0.1.0"
authors = ["RaphaelNY <1278173058@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
dioxus = { version = "0.6.3", features = ["desktop", "html", "web"] }
dioxus-web = "0.6.3"
fxhash = "0.2.1"
ropey = "1.6.0"
smallvec = "1.14.0"
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
tree-sitter-javascript = "0.23.1"
syntect = "5.2.0"
tokio = { version = "1.44.1", features = ["full"] }
zino = {version = "0.33.0", features = ["dioxus"]}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
